# esp32_cir_recorder

./: pyproject.toml
arduino_serial/: data_processing.ipynb  main_serial_transfer.py  util.py
