[tool.poetry]
name = "arduino-serial"
version = "0.1.0"
description = ""
authors = ["JinyouKim <idhnegit config --global user.name >"]
readme = "README.md"
packages = [{include = "arduino_serial"}]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
